--- a/roles/cklein.mutt/tasks/main.yaml
+++ b/roles/cklein.mutt/tasks/main.yaml
@@ -1,26 +1,22 @@
+---
 - name: Install mutt
   become: true
-  apt:
+  ansible.builtin.apt:
     name:
       - mutt
-      - python3-keyring # for securely storing passwords
-  tags:
-    - mutt
+      - python3-keyring  # for securely storing passwords
 
 - name: Create mutt config folder
-  file:
+  ansible.builtin.file:
     path: ~/.config/mutt
     state: directory
-    recurse: true
-  tags:
-    - mutt
+    mode: '0700'
 
 - name: Copy configuration files
-  template:
+  ansible.builtin.template:
     src: '{{ item | basename | regex_replace("^[.]") }}.j2'
     dest: '{{ item }}'
+    mode: '0644'
   loop:
     - ~/.config/mutt/muttrc
     - ~/.signature
-  tags:
-    - mutt
