Safer NVM installation

--- a/roles/cklein.nodejs/tasks/main.yaml
+++ b/roles/cklein.nodejs/tasks/main.yaml
@@ -1,7 +1,8 @@
+---
 - name: Install Node Version Manager (nvm)
-  shell: >
-    curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v{{ nvm_version }}/install.sh | bash
-  args:
-    creates: ~/.nvm/nvm.sh
-  tags:
-    - nodejs
+  ansible.builtin.git:
+    repo: 'https://github.com/nvm-sh/nvm'
+    dest: ~/.nvm
+    depth: 1
+    update: false
+    version: "v{{ nvm_version }}"
