--- a/roles/cklein.errata/tasks/main.yaml
+++ b/roles/cklein.errata/tasks/main.yaml
@@ -7,6 +7,14 @@
     state: absent
     purge: true
 
+- name: Prefer pip only in virtual environments
+  become: true
+  ansible.builtin.apt:
+    name:
+      - python3-pip
+    state: absent
+    purge: true
+
 - name: Remove Skype
   become: true
   ansible.builtin.command: snap remove skype removes=/snap/bin/skype
