--- a/roles/cklein.errata/tasks/main.yaml
+++ b/roles/cklein.errata/tasks/main.yaml
@@ -17,7 +17,9 @@
 
 - name: Remove Skype
   become: true
-  ansible.builtin.command: snap remove skype removes=/snap/bin/skype
+  community.general.snap:
+    name: skype
+    state: absent
   tags:
     - snap
 
