--- a/roles/cklein.microsoft_key/tasks/main.yaml
+++ b/roles/cklein.microsoft_key/tasks/main.yaml
@@ -1,6 +1,7 @@
+---
 - name: Add Microsoft key
   become: true
-  apt_key:
+  ansible.builtin.apt_key:
     id: BC528686B50D79E339D3721CEB3E94ADBE1229CF
     url: 'https://packages.microsoft.com/keys/microsoft.asc'
     keyring: /etc/apt/keyrings/microsoft.gpg
