Skip even more a systemd handler

--- a/roles/cklein.ntp.se/handlers/main.yml
+++ b/roles/cklein.ntp.se/handlers/main.yml
@@ -3,5 +3,7 @@
   become: true
   ansible.builtin.command: chronyc reload sources
   changed_when: true
+  # https://stackoverflow.com/a/75510129
+  when: "'systemd' not in ansible_skip_tags"
   tags:
     - systemd
