--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -11,5 +11,5 @@ jobs:
         with:
           python-version: '3.12'
           cache: 'pip'
-      - run: pip install pre-commit
+      - run: pip install -r requirements.txt
       - run: pre-commit run --all
