Add pre-commit cache

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -17,4 +17,5 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ~/.cache/pre-commit
+          key: ${{ runner.os }}-pre-commit-cache
       - run: pre-commit run --all
