--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -7,12 +7,25 @@ env:
   UBUNTU_VERSIONS: '["24.04", "24.10"]'
 
 jobs:
+  prepare-matrix:
+    name: Prepare the matrix, so we don't need to repeat ourselves
+    runs-on: ubuntu-latest
+    outputs:
+      UBUNTU_VERSIONS: ${{ steps.step1.outputs.UBUNTU_VERSIONS }}
+    steps:
+      - name: Create UBUNTU_VERSIONS variable
+        id: step1
+        run: echo "UBUNTU_VERSIONS=${{env.UBUNTU_VERSIONS}}" >> $GITHUB_OUTPUT
+
   build:
-    runs-on: ubuntu-24.04
+    name: Build images which emulate a freshly installed Ubuntu Desktop
+    runs-on: ubuntu-latest
+    needs:
+      - prepare-matrix-ubuntu
 
     strategy:
       matrix:
-        ubuntu_version: "${{ fromJson(env.UBUNTU_VERSIONS) }}"
+        ubuntu_version: "${{ fromJson(needs.prepare-matrix.outputs.UBUNTU_VERSIONS }}"
 
     steps:
       - name: Set up Docker Buildx
@@ -34,7 +47,10 @@ jobs:
           path: /tmp/ubuntu-desktop-${UBUNTU_VERSION}.tar
 
   test:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
+    needs:
+      - prepare-matrix
+      - build
 
     strategy:
       matrix:
@@ -46,7 +62,7 @@ jobs:
           - cklein.go
           - cklein.security
           - cklein.shell
-        ubuntu_version: $${ fromJson(env.UBUNTU_VERSIONS} }}
+        ubuntu_version: "${{ fromJson(needs.prepare-matrix.outputs.UBUNTU_VERSIONS }}"
 
     env:
       ROLE: ${{ matrix.ROLE }}
