--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -25,7 +25,7 @@ jobs:
 
     strategy:
       matrix:
-        ubuntu_version: "${{ fromJson(needs.prepare-matrix.outputs.UBUNTU_VERSIONS }}"
+        ubuntu_version: "${{ fromJson(needs.prepare-matrix.outputs.UBUNTU_VERSIONS) }}"
 
     steps:
       - name: Set up Docker Buildx
@@ -62,7 +62,7 @@ jobs:
           - cklein.go
           - cklein.security
           - cklein.shell
-        ubuntu_version: "${{ fromJson(needs.prepare-matrix.outputs.UBUNTU_VERSIONS }}"
+        ubuntu_version: "${{ fromJson(needs.prepare-matrix.outputs.UBUNTU_VERSIONS) }}"
 
     env:
       ROLE: ${{ matrix.ROLE }}
