--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -8,7 +8,7 @@ env:
 
 jobs:
   prepare-matrix:
-    name: Prepare the matrix, so we don't need to repeat ourselves
+    name: Prepare the matrix
     runs-on: ubuntu-latest
     outputs:
       UBUNTU_VERSIONS: ${{ steps.step1.outputs.UBUNTU_VERSIONS }}
@@ -18,7 +18,7 @@ jobs:
         run: echo "UBUNTU_VERSIONS=${{env.UBUNTU_VERSIONS}}" >> $GITHUB_OUTPUT
 
   build:
-    name: Build images which emulate a freshly installed Ubuntu Desktop
+    name: Build Ubuntu Desktop images
     runs-on: ubuntu-latest
     needs:
       - prepare-matrix
@@ -30,6 +30,8 @@ jobs:
     steps:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+
+      - uses: actions/checkout@v4
 
       - name: Build and export
         uses: docker/build-push-action@v6
