--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -4,7 +4,7 @@ name: Test
 
 env:
   DOCKER_IMAGE: "cristiklein/stateless-workstation-config/ubuntu-desktop"
-  UBUNTU_VERSIONS: '["24.04", "24.10"]'
+  UBUNTU_VERSIONS: '[\"24.04\", \"24.10\"]'
 
 jobs:
   prepare-matrix:
@@ -76,6 +76,18 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+
+      - name: Download artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: "ubuntu-desktop-${{ matrix.UBUNTU_VERSION }}"
+          path: /tmp/ubuntu-desktop-${{ matrix.UBUNTU_VERSION }}.tar
+
+      - name: Load image
+        run: |
+          docker load --input \
+            /tmp/ubuntu-desktop-${{ matrix.UBUNTU_VERSION }}.tar
+          docker image ls -a
 
       - name: Generate Site YAML for Role
         run: |
