--- a/roles/cklein.cloud_tools/tasks/azure.yaml
+++ b/roles/cklein.cloud_tools/tasks/azure.yaml
@@ -9,7 +9,12 @@
 - name: Add Microsoft repository
   become: true
   ansible.builtin.apt_repository:
-    repo: deb [arch=amd64 signed-by=/etc/apt/keyrings/microsoft.gpg] https://packages.microsoft.com/repos/azure-cli/ {{ ansible_distribution_release }} main
+    repo: >
+      deb
+      [arch=amd64 signed-by=/etc/apt/keyrings/microsoft.gpg]
+      https://packages.microsoft.com/repos/azure-cli/
+      {{ ansible_distribution_release }}
+      main
 
 - name: Install Azure CLI
   become: true
