--- a/site.yml
+++ b/site.yml
@@ -34,6 +34,7 @@
     - cklein.mplayer
     - cklein.nodejs
     - cklein.ntp.se
+    - cklein.obsidian
     - cklein.pdftk
     - cklein.python
     - cklein.remote_unlock_encrypted_volume
