Move configuration files to cklein.dotfiles

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -16,10 +16,10 @@ jobs:
           - ''
           - cklein.cloud_tools
           - cklein.cncf
+          - cklein.dotfiles
           - cklein.git
           - cklein.go
           - cklein.security
-          - cklein.shell
         ubuntu_version:
           - '24.04'
           - '24.10'
