Optimize performance via explicit facts gathering

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -5,6 +5,7 @@ ansible_managed=DO NOT EDIT! This file is managed by Ansible.%n
   user: {uid}
   host: {host}
 callbacks_enabled = ansible.posix.profile_tasks
+gathering = explicit
 stdout_callback = debug
 local_tmp = /tmp/.ansible/tmp
 remote_tmp = /tmp/.ansible/tmp
