Add selected_editor in cklein.dotfiles

--- a/roles/cklein.dotfiles/tasks/main.yaml
+++ b/roles/cklein.dotfiles/tasks/main.yaml
@@ -21,6 +21,7 @@
     - 'bashrc'
     - 'inputrc'
     - 'profile'
+    - 'selected_editor'
 
 - name: Remove unneeded dotfiles
   ansible.builtin.file:
