Move signature to cklein.dotfiles

--- a/roles/cklein.dotfiles/tasks/main.yaml
+++ b/roles/cklein.dotfiles/tasks/main.yaml
@@ -22,6 +22,7 @@
     - 'inputrc'
     - 'profile'
     - 'selected_editor'
+    - 'signature'
 
 - name: Remove unneeded dotfiles
   ansible.builtin.file:
