Avoid creating ~/.ansible

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -7,6 +7,5 @@ ansible_managed=DO NOT EDIT! This file is managed by Ansible.%n
 callbacks_enabled = ansible.posix.profile_tasks
 gathering = explicit
 stdout_callback = debug
-local_tmp = /tmp/.ansible/tmp
-remote_tmp = /tmp/.ansible/tmp
+home = /tmp/.ansible
 roles_path = ./roles
