Really try to avoid creating ~/.ansible

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -8,4 +8,6 @@ callbacks_enabled = ansible.posix.profile_tasks
 gathering = explicit
 stdout_callback = debug
 home = /tmp/.ansible
+local_tmp = /tmp/.ansible/tmp
+remote_tmp = /tmp/.ansible/tmp
 roles_path = ./roles
