Also set dark background

--- a/roles/cklein.wallpapers/tasks/main.yaml
+++ b/roles/cklein.wallpapers/tasks/main.yaml
@@ -20,3 +20,10 @@
     value: "{{ wallpaper_path | expanduser | tojson }}"
   tags:
     - dconf
+
+- name: Set GNOME Wallpaper (dark theme)
+  community.general.dconf:
+    key: "/org/gnome/desktop/background/picture-uri-dark"
+    value: "{{ wallpaper_path | expanduser | tojson }}"
+  tags:
+    - dconf
